--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "test": "gulp test"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/http": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@angular/router": "^2.0.0-rc.1",
-    "@angular/router-deprecated": "^2.0.0-rc.1",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/router": "^3.0.0",
+    "@angular/upgrade": "^2.0.0",
     "babel-core": "^6.8.0",
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015-node5": "^1.2.0",
@@ -61,16 +61,16 @@
     "gulp-wait": "0.0.2",
     "http-proxy-middleware": "^0.9.0",
     "isparta": "^4.0.0",
-    "jspm": "^0.16.32",
     "jasmine": "2.3.2",
+    "jspm": "^0.16.32",
     "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-cli": "^0.0.4",
-    "karma-jasmine": "^0.3.6",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^4.3.0",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "^0.0.4",
     "karma-coverage": "^0.5.3",
     "karma-html-reporter": "^0.2.6",
+    "karma-jasmine": "^0.3.6",
     "karma-jspm": "^2.0.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.5",
@@ -93,12 +93,12 @@
     "rxjs": "^5.0.0-beta.6",
     "stylelint": "^4.4.0",
     "tslint": "^3.7.0-dev.2",
-    "typescript": "^1.9.0-dev.20160409",
+    "typescript": "^2.0.2",
     "undertaker-forward-reference": "^1.0.1",
     "url": "^0.11.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.23"
   },
   "jspm": {
     "directories": {
@@ -106,14 +106,23 @@
     },
     "configFile": "app/jspm-config/config.js",
     "dependencies": {
-      "@angular/common": "npm:@angular/common@^2.0.0-rc.1",
-      "@angular/compiler": "npm:@angular/compiler@^2.0.0-rc.1",
-      "@angular/core": "npm:@angular/core@^2.0.0-rc.1",
-      "@angular/http": "npm:@angular/http@^2.0.0-rc.1",
-      "@angular/platform-browser": "npm:@angular/platform-browser@^2.0.0-rc.1",
-      "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0-rc.1",
-      "@angular/router": "npm:@angular/router@^2.0.0-rc.1",
-      "@angular/router-deprecated": "npm:@angular/router-deprecated@^2.0.0-rc.1",
+      "@angular/common": "npm:@angular/common@^2.0.0",
+      "@angular/common@2.0.0": "npm:@angular/common@2.0.0",
+      "@angular/compiler": "npm:@angular/compiler@^2.0.0",
+      "@angular/compiler@2.0.0": "npm:@angular/compiler@2.0.0",
+      "@angular/core": "npm:@angular/core@^2.0.0",
+      "@angular/core@2.0.0": "npm:@angular/core@2.0.0",
+      "@angular/forms@2.0.0": "npm:@angular/forms@2.0.0",
+      "@angular/http": "npm:@angular/http@^2.0.0",
+      "@angular/http@2.0.0": "npm:@angular/http@2.0.0",
+      "@angular/platform-browser": "npm:@angular/platform-browser@^2.0.0",
+      "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0",
+      "@angular/platform-browser-dynamic@2.0.0": "npm:@angular/platform-browser-dynamic@2.0.0",
+      "@angular/platform-browser@2.0.0": "npm:@angular/platform-browser@2.0.0",
+      "@angular/router": "npm:@angular/router@^3.0.0",
+      "@angular/router@3.0.0": "npm:@angular/router@3.0.0",
+      "@angular/upgrade": "npm:@angular/upgrade@^2.0.0",
+      "@angular/upgrade@2.0.0": "npm:@angular/upgrade@2.0.0",
       "@angular2-material/button": "npm:@angular2-material/button@2.0.0-alpha.5",
       "@angular2-material/card": "npm:@angular2-material/card@2.0.0-alpha.5",
       "@angular2-material/checkbox": "npm:@angular2-material/checkbox@2.0.0-alpha.5",
@@ -125,16 +134,23 @@
       "@angular2-material/radio": "npm:@angular2-material/radio@2.0.0-alpha.5",
       "@angular2-material/sidenav": "npm:@angular2-material/sidenav@2.0.0-alpha.5",
       "@angular2-material/toolbar": "npm:@angular2-material/toolbar@2.0.0-alpha.5",
+      "angular2-in-memory-web-api": "npm:angular2-in-memory-web-api@0.0.20",
+      "bootstrap": "npm:bootstrap@^3.3.6",
       "es6-shim": "github:es-shims/es6-shim@^0.35.0",
       "ng2-translate": "npm:ng2-translate@^2.1.0",
-      "reflect-metadata": "npm:reflect-metadata@0.1.2",
-      "rxjs": "npm:rxjs@5.0.0-beta.6",
-      "zone.js": "npm:zone.js@0.6.12"
+      "reflect-metadata": "npm:reflect-metadata@^0.1.3",
+      "rxjs": "npm:rxjs@5.0.0-beta.12",
+      "systemjs": "npm:systemjs@0.19.27",
+      "typescript": "npm:typescript@2.0.2",
+      "zone.js": "npm:zone.js@^0.6.23"
     },
     "devDependencies": {
       "-": "npm:babel-core@^5.8.24",
       "--runtime": "npm:babel-runtime@^5.8.24",
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
       "clean-css": "npm:clean-css@^3.4.11",
+      "core-js": "npm:core-js@^2.4.1",
       "css": "github:systemjs/plugin-css@^0.1.6",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "scss": "github:theefer/plugin-sass@master",
