--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@angular/platform-browser-dynamic": "^2.0.0",
     "@angular/router": "^3.0.0",
     "@angular/upgrade": "^2.0.0",
+    "admin-lte": "^2.3.6",
     "babel-core": "^6.8.0",
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015-node5": "^1.2.0",
     "babel-preset-stage-3": "^6.5.0",
+    "bootstrap": "^3.3.7",
+    "bootstrap-css": "^3.0.0",
     "browser-sync": "^2.10.1",
     "browser-sync-spa": "^1.0.2",
     "del": "^2.2.0",
@@ -62,6 +65,7 @@
     "http-proxy-middleware": "^0.9.0",
     "isparta": "^4.0.0",
     "jasmine": "2.3.2",
+    "jquery": "^3.1.0",
     "jspm": "^0.16.32",
     "karma": "^0.13.22",
     "karma-babel-preprocessor": "^6.0.1",
@@ -123,9 +127,13 @@
       "@angular/router@3.0.0": "npm:@angular/router@3.0.0",
       "@angular/upgrade": "npm:@angular/upgrade@^2.0.0",
       "@angular/upgrade@2.0.0": "npm:@angular/upgrade@2.0.0",
+      "admin-lte": "npm:admin-lte@^2.3.6",
       "angular2-in-memory-web-api": "npm:angular2-in-memory-web-api@0.0.20",
-      "bootstrap": "npm:bootstrap@^3.3.6",
+      "bootstrap": "github:twbs/bootstrap@^3.3.7",
       "es6-shim": "github:es-shims/es6-shim@^0.35.0",
+      "font-awesome": "npm:font-awesome@^4.6.3",
+      "ionicons": "npm:ionicons@^3.0.0",
+      "jquery": "npm:jquery@^3.1.0",
       "reflect-metadata": "npm:reflect-metadata@^0.1.3",
       "rxjs": "npm:rxjs@5.0.0-beta.12",
       "systemjs": "npm:systemjs@0.19.27",
@@ -139,7 +147,7 @@
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "clean-css": "npm:clean-css@^3.4.11",
       "core-js": "npm:core-js@^2.4.1",
-      "css": "github:systemjs/plugin-css@^0.1.6",
+      "css": "npm:jspm-loader-css@^1.1.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "scss": "github:theefer/plugin-sass@master",
       "text": "github:systemjs/plugin-text@^0.0.2"
